More alignment fixes

--- a/less/tumblr.less
+++ b/less/tumblr.less
@@ -832,7 +832,7 @@ ol.notes {
 
 .post-list {
     padding: 0;
-    margin: 15px 20px 0 20px;
+    margin: 15px 5px;
 
     .post {
         box-sizing: border-box;
@@ -950,15 +950,35 @@ header:after, #container:after, .caption_and_post_info:after, footer:after .butt
     .post-list .post { width: 33%; }
 }
 @media (min-width: 1200px) { }
+
+@media (min-width: 768px) {
+    .index-page {
+        .post-list {
+            margin: 15px 0 0 30px;
+        }
+    }
+}
+
 @media (min-width: 980px) {
     .post-list .post { padding: 10px; }
+
+    .index-page {
+        .post-list {
+            margin: 15px 0 0 25px;
+        }
+    }
 }
+
 @media (max-width: 979px) {
     #nav .site-links-2 { display: none; }
     .permalink-page {
         #popular {
             margin: 0 15px 0 35px;
             .posts { margin: 15px 0 0 0; }
+        }
+
+        #posts {
+            padding: 0 10px;
         }
     }
 }
@@ -1008,12 +1028,10 @@ header:after, #container:after, .caption_and_post_info:after, footer:after .butt
         width: 96%;
         height: 96%;
     }
-    #posts { padding: 0 10px; }
     .index-page {
         header { margin-bottom: 11px; }
         #blog_info { padding-bottom: 11px; }
         #blog_info .project-prompt { margin-bottom: 11px; }
-        .post-list { margin: 0 10px 0 10px; }
     }
     .permalink-page {
         #popular {
@@ -1029,8 +1047,6 @@ header:after, #container:after, .caption_and_post_info:after, footer:after .butt
     }
     #blog_info h1 { font-size: 36px; }
     .post-list {
-        padding-left: 10px; 
-        padding-right: 10px;
         .post .wrap { padding: 11px 15px 15px 15px; }
     }
     .post_info li {
@@ -1061,9 +1077,6 @@ header:after, #container:after, .caption_and_post_info:after, footer:after .butt
 
         #popular {
             margin: 0;
-            .post-list {
-                margin: 0 -5px;
-            }
         }
     }
 }
